// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`wclResultToRoute — full route pull snapshots > 6pMc2dJHBh1Q8rGF-13 (Windrunner 2) pulls 1`] = `
[
  {
    "id": 0,
    "spawns": [
      "1-1",
      "1-2",
      "2-1",
      "2-2",
      "2-3",
      "2-4",
      "2-5",
      "2-6",
      "3-1",
      "3-2",
    ],
  },
  {
    "id": 1,
    "spawns": [
      "1-4",
      "10-1",
      "11-10",
      "11-11",
      "11-12",
      "11-13",
      "11-14",
      "11-15",
      "11-4",
      "11-5",
      "11-6",
      "11-7",
      "11-8",
      "11-9",
      "12-1",
      "2-10",
      "2-11",
      "2-7",
      "2-8",
      "2-9",
    ],
  },
  {
    "id": 2,
    "spawns": [
      "1-5",
      "11-16",
      "11-17",
      "11-18",
      "11-19",
      "11-25",
      "11-26",
      "11-27",
      "11-28",
      "12-2",
      "12-3",
      "13-1",
      "16-1",
      "16-2",
      "16-3",
      "2-15",
    ],
  },
  {
    "id": 3,
    "spawns": [
      "14-1",
      "14-10",
      "14-11",
      "14-12",
      "14-13",
      "14-14",
      "14-15",
      "14-16",
      "14-17",
      "14-18",
      "14-19",
      "14-2",
      "14-20",
      "14-21",
      "14-22",
      "14-23",
      "14-24",
      "14-25",
      "14-26",
      "14-27",
      "14-28",
      "14-29",
      "14-3",
      "14-30",
      "14-31",
      "14-32",
      "14-33",
      "14-34",
      "14-35",
      "14-4",
      "14-5",
      "14-6",
      "14-7",
      "14-8",
      "14-9",
      "2-16",
      "2-17",
      "2-18",
      "2-19",
      "2-20",
      "2-21",
    ],
  },
  {
    "id": 4,
    "spawns": [
      "23-1",
      "28-1",
      "28-2",
      "28-3",
    ],
  },
  {
    "id": 5,
    "spawns": [
      "2-22",
      "2-23",
      "2-24",
      "2-25",
      "4-3",
      "5-6",
      "6-10",
      "6-2",
      "7-2",
      "8-1",
    ],
  },
  {
    "id": 6,
    "spawns": [
      "4-2",
      "4-4",
      "5-2",
      "5-3",
      "6-4",
      "6-5",
      "6-6",
      "7-1",
      "7-3",
      "7-4",
      "9-1",
    ],
  },
  {
    "id": 7,
    "spawns": [
      "24-1",
      "25-1",
      "7-5",
      "7-6",
    ],
  },
  {
    "id": 8,
    "spawns": [
      "17-1",
      "17-2",
      "17-3",
      "18-1",
      "18-2",
      "29-1",
      "29-2",
      "4-5",
      "4-6",
      "4-7",
      "4-8",
      "4-9",
    ],
  },
  {
    "id": 9,
    "spawns": [
      "19-1",
      "19-2",
      "19-3",
      "19-4",
      "20-2",
      "20-4",
      "21-2",
      "21-3",
      "22-1",
      "30-1",
      "30-2",
      "30-3",
      "30-4",
      "30-5",
    ],
  },
  {
    "id": 10,
    "spawns": [
      "19-5",
      "20-3",
      "21-4",
      "21-5",
      "22-2",
    ],
  },
  {
    "id": 11,
    "spawns": [
      "20-1",
      "26-1",
      "30-6",
    ],
  },
  {
    "id": 12,
    "spawns": [
      "27-1",
    ],
  },
]
`;

exports[`wclResultToRoute — full route pull snapshots > CfTcvG8NAj3xY7BD-6 (Maisara Caverns) pulls 1`] = `
[
  {
    "id": 0,
    "spawns": [
      "1-1",
      "1-2",
      "1-3",
      "1-4",
      "1-9",
      "2-2",
      "3-1",
      "4-1",
      "5-1",
      "5-2",
      "8-1",
      "8-19",
      "8-2",
      "8-20",
      "8-3",
      "9-1",
      "9-2",
    ],
  },
  {
    "id": 1,
    "spawns": [
      "1-22",
      "1-26",
      "1-27",
      "10-3",
      "11-10",
      "4-14",
      "7-26",
      "7-27",
      "7-28",
      "8-10",
      "8-18",
      "8-9",
      "9-20",
      "9-28",
      "9-29",
      "9-30",
    ],
  },
  {
    "id": 2,
    "spawns": [
      "3-6",
      "4-10",
      "4-19",
      "5-8",
      "5-9",
      "7-19",
      "7-20",
      "7-21",
      "7-22",
      "8-14",
      "8-15",
      "9-21",
      "9-22",
      "9-23",
      "9-24",
      "9-25",
    ],
  },
  {
    "id": 3,
    "spawns": [
      "11-6",
      "11-7",
      "11-8",
      "19-1",
      "20-1",
      "7-11",
      "7-12",
      "7-17",
      "7-18",
      "7-9",
      "8-11",
      "8-12",
    ],
  },
  {
    "id": 4,
    "spawns": [
      "13-1",
      "13-2",
      "13-3",
      "13-5",
      "13-6",
      "13-7",
      "13-8",
      "14-1",
      "14-2",
      "15-1",
      "15-3",
      "15-5",
      "15-6",
      "16-1",
      "17-1",
      "27-1",
      "28-1",
    ],
  },
  {
    "id": 5,
    "spawns": [
      "12-2",
      "13-4",
      "13-9",
      "14-3",
      "14-4",
      "14-5",
      "14-6",
      "15-2",
      "15-4",
    ],
  },
  {
    "id": 6,
    "spawns": [
      "11-13",
      "13-10",
      "13-11",
      "13-12",
      "13-13",
      "13-14",
      "14-13",
      "14-14",
      "15-7",
      "18-1",
      "26-3",
    ],
  },
  {
    "id": 7,
    "spawns": [
      "26-2",
    ],
  },
  {
    "id": 8,
    "spawns": [
      "11-15",
      "12-3",
      "13-16",
      "13-17",
      "13-18",
      "14-15",
      "14-16",
      "14-17",
      "14-18",
      "17-3",
      "26-4",
      "26-5",
      "26-6",
    ],
  },
  {
    "id": 9,
    "spawns": [
      "12-4",
      "13-19",
      "13-20",
      "13-21",
      "15-10",
      "15-12",
      "15-9",
    ],
  },
  {
    "id": 10,
    "spawns": [
      "13-24",
      "13-25",
      "13-26",
      "13-27",
      "13-28",
      "13-29",
      "14-23",
      "14-24",
      "14-25",
      "14-26",
      "15-11",
      "21-1",
      "23-1",
      "4-18",
    ],
  },
  {
    "id": 11,
    "spawns": [
      "13-22",
      "13-23",
    ],
  },
  {
    "id": 12,
    "spawns": [
      "14-41",
      "14-42",
      "14-43",
      "14-44",
      "15-22",
      "15-23",
      "17-5",
      "26-10",
      "26-9",
    ],
  },
  {
    "id": 13,
    "spawns": [
      "25-1",
    ],
  },
  {
    "id": 14,
    "spawns": [
      "22-1",
      "24-1",
    ],
  },
]
`;

exports[`wclResultToRoute — full route pull snapshots > LvZWMHBf3zrk9nFN-12 (Magister) pulls 1`] = `
[
  {
    "id": 0,
    "spawns": [
      "1-2",
      "1-3",
      "16-1",
      "18-1",
      "18-2",
    ],
  },
  {
    "id": 1,
    "spawns": [
      "1-4",
      "1-5",
      "18-3",
      "18-4",
      "18-5",
      "19-1",
      "19-2",
      "2-1",
      "2-2",
    ],
  },
  {
    "id": 2,
    "spawns": [
      "2-3",
      "2-4",
      "2-5",
      "3-1",
    ],
  },
  {
    "id": 3,
    "spawns": [
      "11-1",
      "15-19",
      "15-20",
      "15-21",
      "15-22",
      "15-23",
      "15-24",
      "3-4",
    ],
  },
  {
    "id": 4,
    "spawns": [
      "15-10",
      "15-11",
      "15-12",
      "15-13",
      "15-14",
      "15-15",
      "15-16",
      "15-17",
      "15-18",
      "15-7",
      "15-8",
      "15-9",
    ],
  },
  {
    "id": 5,
    "spawns": [
      "1-10",
      "15-25",
      "15-26",
      "15-27",
      "15-28",
      "15-29",
      "15-30",
      "15-31",
      "15-32",
      "15-33",
      "15-34",
      "15-35",
      "15-36",
      "15-37",
      "15-38",
      "15-39",
      "15-40",
      "15-41",
      "15-42",
      "15-43",
      "15-44",
      "15-45",
      "15-46",
      "15-47",
      "15-48",
      "18-14",
      "18-15",
      "19-10",
      "4-1",
    ],
  },
  {
    "id": 6,
    "spawns": [
      "1-9",
      "18-12",
      "18-13",
      "19-9",
      "25-12",
      "4-2",
    ],
  },
  {
    "id": 7,
    "spawns": [
      "1-11",
    ],
  },
  {
    "id": 8,
    "spawns": [
      "18-16",
      "18-17",
      "19-11",
      "19-12",
      "25-13",
      "4-3",
      "4-4",
    ],
  },
  {
    "id": 9,
    "spawns": [
      "12-1",
    ],
  },
  {
    "id": 10,
    "spawns": [
      "10-1",
      "5-1",
      "5-10",
      "5-11",
      "5-12",
      "5-13",
      "5-14",
      "5-15",
      "5-16",
      "5-17",
      "5-2",
      "5-3",
      "5-4",
      "5-5",
      "5-6",
      "5-7",
      "5-8",
      "5-9",
      "6-1",
      "6-2",
      "6-3",
      "6-4",
      "6-5",
      "7-1",
      "7-6",
    ],
  },
  {
    "id": 11,
    "spawns": [
      "10-6",
      "10-7",
      "10-9",
      "5-18",
      "5-19",
      "5-20",
      "5-21",
      "5-22",
      "5-23",
      "5-24",
      "5-25",
      "5-26",
      "5-27",
      "5-28",
      "5-29",
      "5-30",
      "5-31",
      "5-32",
      "5-33",
      "5-34",
      "5-35",
      "6-13",
      "6-15",
      "6-16",
      "8-2",
      "9-1",
    ],
  },
  {
    "id": 12,
    "spawns": [
      "10-8",
      "7-13",
    ],
  },
  {
    "id": 13,
    "spawns": [
      "13-1",
      "20-1",
      "22-1",
    ],
  },
  {
    "id": 14,
    "spawns": [
      "7-11",
    ],
  },
  {
    "id": 15,
    "spawns": [
      "7-12",
    ],
  },
  {
    "id": 16,
    "spawns": [
      "10-10",
      "10-11",
      "10-13",
      "10-14",
      "24-1",
      "24-2",
      "5-36",
      "5-37",
      "5-38",
      "5-39",
      "5-40",
      "5-41",
      "5-42",
      "5-43",
      "5-44",
      "5-45",
      "5-46",
      "5-47",
      "5-48",
      "5-49",
      "5-50",
      "5-51",
      "5-52",
      "5-53",
      "5-54",
      "5-55",
      "5-56",
      "5-57",
      "5-58",
      "5-59",
      "5-60",
      "5-61",
      "5-62",
      "6-17",
      "9-3",
    ],
  },
  {
    "id": 17,
    "spawns": [
      "10-15",
      "10-16",
      "10-17",
      "6-18",
      "6-19",
      "6-20",
      "6-21",
      "6-22",
      "9-4",
    ],
  },
  {
    "id": 18,
    "spawns": [
      "14-1",
    ],
  },
]
`;

exports[`wclResultToRoute — full route pull snapshots > byxFGKhMgkAcPp6V-21 (Maisara Caverns 2) pulls 1`] = `
[
  {
    "id": 0,
    "spawns": [
      "1-1",
      "1-2",
      "1-3",
      "1-4",
      "1-9",
      "2-2",
      "3-1",
      "8-1",
      "8-2",
      "8-3",
      "9-1",
      "9-2",
    ],
  },
  {
    "id": 1,
    "spawns": [
      "11-12",
      "4-15",
      "6-5",
      "7-23",
      "7-24",
      "7-25",
      "8-19",
      "8-20",
      "9-28",
      "9-29",
      "9-30",
    ],
  },
  {
    "id": 2,
    "spawns": [
      "1-22",
      "1-26",
      "1-27",
      "10-3",
      "11-10",
      "7-29",
      "7-30",
      "7-31",
      "7-32",
      "7-33",
      "7-34",
      "7-35",
      "7-36",
      "8-10",
      "8-18",
      "8-9",
      "9-20",
      "9-21",
    ],
  },
  {
    "id": 3,
    "spawns": [
      "3-6",
      "4-10",
      "4-19",
      "5-8",
      "5-9",
      "7-19",
      "7-20",
      "7-21",
      "7-22",
      "8-13",
      "8-14",
      "8-15",
      "9-22",
      "9-23",
      "9-24",
      "9-25",
    ],
  },
  {
    "id": 4,
    "spawns": [
      "11-6",
      "11-7",
      "11-8",
      "6-3",
      "7-13",
      "7-14",
      "7-15",
      "7-16",
      "7-17",
      "7-18",
      "9-15",
      "9-16",
      "9-17",
      "9-18",
      "9-19",
    ],
  },
  {
    "id": 5,
    "spawns": [
      "1-16",
      "1-17",
      "11-5",
      "3-4",
      "4-8",
    ],
  },
  {
    "id": 6,
    "spawns": [
      "19-1",
      "20-1",
      "7-10",
      "7-11",
      "7-12",
      "7-37",
      "7-9",
      "8-11",
      "8-12",
    ],
  },
  {
    "id": 7,
    "spawns": [
      "13-3",
      "13-4",
      "13-5",
      "13-6",
      "15-1",
      "15-2",
      "15-3",
      "16-1",
      "27-1",
      "28-1",
    ],
  },
  {
    "id": 8,
    "spawns": [
      "13-7",
      "13-8",
      "13-9",
      "14-3",
      "14-4",
      "14-5",
      "14-6",
      "15-5",
      "15-6",
      "17-1",
    ],
  },
  {
    "id": 9,
    "spawns": [
      "13-10",
      "13-11",
      "13-12",
      "13-13",
      "13-14",
      "14-13",
      "14-14",
      "15-7",
      "17-2",
      "18-1",
      "26-2",
      "26-3",
    ],
  },
  {
    "id": 10,
    "spawns": [
      "11-15",
      "12-3",
      "13-16",
      "13-17",
      "13-18",
      "13-19",
      "13-20",
      "13-21",
      "14-15",
      "14-16",
      "14-17",
      "14-18",
      "26-4",
      "26-5",
      "26-6",
    ],
  },
  {
    "id": 11,
    "spawns": [
      "13-22",
      "13-23",
      "14-21",
      "14-22",
      "17-4",
      "18-3",
    ],
  },
  {
    "id": 12,
    "spawns": [
      "13-26",
      "13-27",
      "13-28",
      "13-29",
      "14-23",
      "14-24",
      "14-25",
      "14-26",
      "4-18",
    ],
  },
  {
    "id": 13,
    "spawns": [
      "21-1",
      "23-1",
    ],
  },
  {
    "id": 14,
    "spawns": [
      "25-1",
    ],
  },
  {
    "id": 15,
    "spawns": [
      "22-1",
      "24-1",
    ],
  },
]
`;

exports[`wclResultToRoute — full route pull snapshots > gqw4y97LcfAFnHBX-9 (Windrunner) pulls 1`] = `
[
  {
    "id": 0,
    "spawns": [
      "1-1",
      "1-2",
      "2-1",
      "2-2",
      "2-3",
      "2-4",
      "2-5",
      "2-6",
      "3-1",
      "3-2",
    ],
  },
  {
    "id": 1,
    "spawns": [
      "1-4",
      "10-1",
      "11-10",
      "11-11",
      "11-12",
      "11-13",
      "11-14",
      "11-15",
      "11-4",
      "11-5",
      "11-6",
      "11-7",
      "11-8",
      "11-9",
      "12-1",
      "2-10",
      "2-11",
      "2-7",
      "2-8",
    ],
  },
  {
    "id": 2,
    "spawns": [
      "11-1",
      "11-2",
      "11-3",
    ],
  },
  {
    "id": 3,
    "spawns": [
      "1-5",
      "11-16",
      "11-17",
      "11-18",
      "11-19",
      "11-25",
      "11-26",
      "11-27",
      "11-28",
      "11-29",
      "11-30",
      "11-31",
      "11-33",
      "11-34",
      "11-35",
      "12-2",
      "12-3",
      "13-1",
      "16-1",
      "16-2",
      "16-3",
      "2-15",
    ],
  },
  {
    "id": 4,
    "spawns": [
      "14-1",
      "14-10",
      "14-11",
      "14-13",
      "14-14",
      "14-15",
      "14-16",
      "14-17",
      "14-18",
      "14-19",
      "14-2",
      "14-20",
      "14-21",
      "14-22",
      "14-23",
      "14-24",
      "14-25",
      "14-26",
      "14-27",
      "14-28",
      "14-29",
      "14-3",
      "14-30",
      "14-31",
      "14-32",
      "14-33",
      "14-34",
      "14-35",
      "14-36",
      "14-37",
      "14-4",
      "14-40",
      "14-5",
      "14-6",
      "14-7",
      "14-8",
      "14-9",
      "2-16",
      "2-17",
      "2-18",
      "2-19",
      "2-20",
      "2-21",
      "23-1",
      "28-1",
      "28-2",
      "28-3",
    ],
  },
  {
    "id": 5,
    "spawns": [
      "1-6",
      "2-22",
      "2-23",
      "2-24",
      "2-25",
      "4-1",
      "4-2",
      "4-3",
      "4-4",
      "5-1",
      "6-1",
      "6-2",
      "7-3",
      "7-4",
    ],
  },
  {
    "id": 6,
    "spawns": [
      "5-2",
      "5-3",
      "6-3",
      "6-4",
      "6-5",
      "6-6",
      "7-1",
      "9-1",
    ],
  },
  {
    "id": 7,
    "spawns": [
      "24-1",
      "25-1",
      "7-6",
    ],
  },
  {
    "id": 8,
    "spawns": [
      "7-5",
    ],
  },
  {
    "id": 9,
    "spawns": [
      "17-1",
      "17-2",
      "17-3",
      "18-1",
      "18-2",
      "29-1",
      "29-2",
      "4-5",
      "4-6",
      "4-7",
      "4-8",
      "4-9",
    ],
  },
  {
    "id": 10,
    "spawns": [
      "19-1",
      "19-2",
      "19-3",
      "19-4",
      "20-2",
      "20-4",
      "21-2",
      "21-3",
      "22-1",
      "30-1",
      "30-2",
      "30-3",
      "30-4",
      "30-5",
    ],
  },
  {
    "id": 11,
    "spawns": [
      "19-5",
      "20-3",
      "21-4",
      "21-5",
      "22-2",
    ],
  },
  {
    "id": 12,
    "spawns": [
      "20-1",
      "26-1",
      "30-6",
    ],
  },
  {
    "id": 13,
    "spawns": [
      "27-1",
    ],
  },
]
`;

exports[`wclResultToRoute — full route pull snapshots > kv3rTjxn2XLQpwKf-9 (Pit) pulls 1`] = `
[
  {
    "id": 0,
    "spawns": [
      "1-5",
      "13-17",
      "13-18",
      "13-8",
      "13-9",
      "2-12",
      "2-13",
      "2-14",
      "3-5",
      "4-15",
      "5-10",
      "5-11",
      "5-24",
      "6-2",
      "7-19",
      "7-28",
      "7-29",
      "7-31",
      "8-10",
      "8-11",
      "9-20",
      "9-34",
      "9-35",
    ],
  },
  {
    "id": 1,
    "spawns": [
      "1-4",
      "1-6",
      "10-7",
      "11-3",
      "13-10",
      "13-11",
      "13-12",
      "13-13",
      "2-10",
      "2-11",
      "2-15",
      "2-16",
      "2-9",
      "3-4",
      "3-6",
      "5-21",
      "7-23",
      "9-22",
    ],
  },
  {
    "id": 2,
    "spawns": [
      "1-3",
      "1-7",
      "10-8",
      "11-4",
      "13-16",
      "2-17",
      "2-18",
      "2-19",
      "2-6",
      "2-7",
      "2-8",
      "3-3",
      "3-7",
      "5-23",
      "7-24",
      "8-8",
    ],
  },
  {
    "id": 3,
    "spawns": [
      "10-3",
      "12-3",
      "13-19",
      "4-2",
      "5-25",
      "5-3",
      "6-10",
      "7-7",
      "8-3",
      "9-12",
      "9-39",
      "9-40",
    ],
  },
  {
    "id": 4,
    "spawns": [
      "10-2",
      "12-2",
      "13-20",
      "14-8",
      "5-2",
      "7-30",
      "7-5",
      "7-6",
      "8-2",
      "9-10",
      "9-11",
      "9-6",
      "9-7",
      "9-8",
      "9-9",
    ],
  },
  {
    "id": 5,
    "spawns": [
      "4-1",
    ],
  },
  {
    "id": 6,
    "spawns": [
      "18-1",
    ],
  },
  {
    "id": 7,
    "spawns": [
      "1-2",
      "2-3",
      "2-4",
      "2-5",
      "3-2",
    ],
  },
  {
    "id": 8,
    "spawns": [
      "12-1",
      "13-1",
      "14-7",
      "5-26",
      "6-9",
      "7-4",
      "8-1",
      "9-5",
    ],
  },
  {
    "id": 9,
    "spawns": [
      "1-1",
      "14-2",
      "2-1",
      "2-2",
      "3-1",
      "5-1",
    ],
  },
  {
    "id": 10,
    "spawns": [
      "10-1",
    ],
  },
  {
    "id": 11,
    "spawns": [
      "16-1",
      "17-1",
      "23-1",
      "7-1",
      "7-2",
      "7-3",
      "9-3",
      "9-4",
    ],
  },
  {
    "id": 12,
    "spawns": [
      "4-14",
      "6-7",
      "7-25",
      "7-26",
      "7-27",
      "8-13",
      "9-24",
      "9-25",
      "9-26",
      "9-41",
      "9-42",
      "9-43",
      "9-44",
      "9-45",
    ],
  },
  {
    "id": 13,
    "spawns": [
      "14-5",
      "15-1",
      "9-27",
      "9-28",
      "9-29",
      "9-30",
      "9-31",
      "9-32",
      "9-33",
    ],
  },
  {
    "id": 14,
    "spawns": [
      "19-1",
      "20-1",
      "21-1",
      "21-2",
      "22-1",
      "22-2",
      "22-3",
    ],
  },
]
`;

exports[`wclResultToRoute — full route pull snapshots > rGPCqaDyQmJbBLfX-9 (Magister 3) pulls 1`] = `
[
  {
    "id": 0,
    "spawns": [
      "1-2",
      "1-3",
      "16-1",
      "18-1",
      "18-2",
    ],
  },
  {
    "id": 1,
    "spawns": [
      "1-4",
      "1-5",
      "18-3",
      "18-4",
      "18-5",
      "19-1",
      "19-2",
      "2-1",
      "2-2",
    ],
  },
  {
    "id": 2,
    "spawns": [
      "2-3",
      "2-4",
      "2-5",
      "3-1",
    ],
  },
  {
    "id": 3,
    "spawns": [
      "16-2",
      "18-7",
      "18-8",
      "19-4",
      "2-13",
      "2-14",
      "2-15",
      "25-2",
    ],
  },
  {
    "id": 4,
    "spawns": [
      "11-1",
      "15-19",
      "15-20",
      "15-21",
      "15-22",
      "15-23",
      "15-24",
      "3-4",
    ],
  },
  {
    "id": 5,
    "spawns": [
      "15-10",
      "15-11",
      "15-12",
      "15-13",
      "15-14",
      "15-15",
      "15-16",
      "15-17",
      "15-18",
      "15-7",
      "15-8",
      "15-9",
    ],
  },
  {
    "id": 6,
    "spawns": [
      "1-10",
      "15-37",
      "15-38",
      "15-39",
      "15-40",
      "15-41",
      "15-42",
      "15-43",
      "15-44",
      "15-45",
      "15-46",
      "15-47",
      "15-48",
      "18-14",
      "18-15",
      "19-10",
      "19-9",
      "4-1",
    ],
  },
  {
    "id": 7,
    "spawns": [
      "1-11",
      "15-25",
      "15-26",
      "15-27",
      "15-28",
      "15-29",
      "15-30",
      "15-31",
      "15-32",
      "15-33",
      "15-34",
      "15-35",
      "15-36",
      "25-12",
      "4-2",
    ],
  },
  {
    "id": 8,
    "spawns": [
      "18-16",
      "18-17",
      "19-11",
      "19-12",
      "25-13",
      "4-3",
      "4-4",
    ],
  },
  {
    "id": 9,
    "spawns": [
      "12-1",
    ],
  },
  {
    "id": 10,
    "spawns": [
      "23-1",
      "23-2",
      "23-3",
      "23-4",
      "23-5",
      "23-6",
      "5-1",
      "5-10",
      "5-11",
      "5-12",
      "5-2",
      "5-3",
      "5-4",
      "5-5",
      "5-6",
      "5-7",
      "5-8",
      "5-9",
      "6-1",
      "6-2",
      "6-3",
      "6-4",
      "6-5",
      "7-1",
      "8-1",
    ],
  },
  {
    "id": 11,
    "spawns": [
      "10-3",
      "10-6",
      "10-7",
      "5-18",
      "5-19",
      "5-20",
      "5-21",
      "5-22",
      "5-23",
      "5-24",
      "5-25",
      "5-26",
      "5-27",
      "6-12",
      "6-13",
    ],
  },
  {
    "id": 12,
    "spawns": [
      "10-8",
      "10-9",
      "5-28",
      "5-29",
      "5-30",
      "5-31",
      "5-32",
      "5-33",
      "5-34",
      "5-35",
      "6-15",
      "6-16",
      "7-13",
      "8-2",
      "9-1",
    ],
  },
  {
    "id": 13,
    "spawns": [
      "7-12",
    ],
  },
  {
    "id": 14,
    "spawns": [
      "13-1",
      "20-1",
      "22-1",
      "7-11",
    ],
  },
  {
    "id": 15,
    "spawns": [
      "10-10",
      "10-11",
      "10-12",
      "24-1",
      "24-2",
      "5-36",
      "5-37",
      "5-38",
      "5-39",
      "5-40",
      "5-41",
      "5-42",
      "5-43",
      "5-44",
      "5-45",
      "5-46",
      "5-47",
      "5-48",
      "5-49",
      "5-60",
      "5-61",
      "5-62",
      "6-17",
    ],
  },
  {
    "id": 16,
    "spawns": [
      "10-15",
      "10-16",
      "10-17",
      "5-50",
      "5-51",
      "5-52",
      "5-53",
      "5-54",
      "5-55",
      "5-56",
      "5-57",
      "5-58",
      "5-59",
      "6-18",
      "6-19",
      "6-20",
      "6-21",
      "6-22",
      "9-4",
    ],
  },
  {
    "id": 17,
    "spawns": [
      "14-1",
    ],
  },
]
`;

exports[`wclResultToRoute — full route pull snapshots > tfKGMcnvPJVhw1y2-1 (Magister 2) pulls 1`] = `
[
  {
    "id": 0,
    "spawns": [
      "1-2",
      "1-3",
      "16-1",
      "18-1",
      "18-2",
    ],
  },
  {
    "id": 1,
    "spawns": [
      "1-4",
      "1-5",
      "18-3",
      "18-4",
      "18-5",
      "19-1",
      "19-2",
      "2-1",
      "2-2",
    ],
  },
  {
    "id": 2,
    "spawns": [
      "2-3",
      "2-4",
      "2-5",
      "3-1",
    ],
  },
  {
    "id": 3,
    "spawns": [
      "11-1",
      "15-19",
      "15-20",
      "15-21",
      "15-22",
      "15-23",
      "15-24",
      "3-4",
    ],
  },
  {
    "id": 4,
    "spawns": [
      "15-10",
      "15-11",
      "15-12",
      "15-13",
      "15-14",
      "15-15",
      "15-16",
      "15-17",
      "15-18",
      "15-7",
      "15-8",
      "15-9",
    ],
  },
  {
    "id": 5,
    "spawns": [
      "1-10",
      "15-25",
      "15-26",
      "15-27",
      "15-28",
      "15-29",
      "15-30",
      "15-31",
      "15-32",
      "15-33",
      "15-34",
      "15-35",
      "15-36",
      "15-37",
      "15-38",
      "15-39",
      "15-40",
      "15-41",
      "15-42",
      "15-43",
      "15-44",
      "15-45",
      "15-46",
      "15-47",
      "15-48",
      "18-14",
      "18-15",
      "19-10",
      "19-9",
      "4-1",
    ],
  },
  {
    "id": 6,
    "spawns": [
      "1-9",
      "18-12",
      "18-13",
      "25-12",
      "4-2",
    ],
  },
  {
    "id": 7,
    "spawns": [
      "1-11",
      "19-11",
      "19-12",
      "25-13",
      "4-3",
      "4-4",
    ],
  },
  {
    "id": 8,
    "spawns": [
      "12-1",
      "18-16",
      "18-17",
    ],
  },
  {
    "id": 9,
    "spawns": [
      "10-1",
      "5-1",
      "5-10",
      "5-11",
      "5-12",
      "5-13",
      "5-14",
      "5-15",
      "5-16",
      "5-17",
      "5-2",
      "5-3",
      "5-4",
      "5-5",
      "5-6",
      "5-7",
      "5-8",
      "5-9",
      "6-1",
      "6-2",
      "6-3",
      "6-4",
      "6-5",
      "7-1",
      "7-4",
    ],
  },
  {
    "id": 10,
    "spawns": [
      "10-6",
      "10-7",
      "10-9",
      "5-18",
      "5-19",
      "5-20",
      "5-21",
      "5-22",
      "5-23",
      "5-24",
      "5-25",
      "5-26",
      "5-27",
      "5-28",
      "5-29",
      "5-30",
      "5-31",
      "5-32",
      "5-33",
      "5-34",
      "5-35",
      "6-13",
      "6-15",
      "6-16",
      "8-2",
      "9-1",
    ],
  },
  {
    "id": 11,
    "spawns": [
      "10-8",
      "7-13",
    ],
  },
  {
    "id": 12,
    "spawns": [
      "13-1",
      "20-1",
      "22-1",
    ],
  },
  {
    "id": 13,
    "spawns": [
      "7-12",
    ],
  },
  {
    "id": 14,
    "spawns": [
      "7-11",
    ],
  },
  {
    "id": 15,
    "spawns": [
      "10-10",
      "10-11",
      "10-13",
      "10-14",
      "24-1",
      "24-2",
      "5-36",
      "5-37",
      "5-38",
      "5-39",
      "5-40",
      "5-41",
      "5-42",
      "5-43",
      "5-44",
      "5-45",
      "5-46",
      "5-47",
      "5-48",
      "5-49",
      "5-50",
      "5-51",
      "5-52",
      "5-53",
      "5-54",
      "5-55",
      "5-56",
      "5-57",
      "5-58",
      "5-59",
      "5-60",
      "5-61",
      "5-62",
      "6-17",
      "9-3",
    ],
  },
  {
    "id": 16,
    "spawns": [
      "10-15",
      "10-16",
      "10-17",
      "6-18",
      "6-19",
      "6-20",
      "6-21",
      "6-22",
      "9-4",
    ],
  },
  {
    "id": 17,
    "spawns": [
      "14-1",
    ],
  },
]
`;
